# As per https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hca-import-validation"
version = "0.0.7"
requires-python = ">=3.6"
dependencies = [
    "requests",
    "google",
    "google-cloud-core",
    "google-cloud-storage",
    "jsonschema",
    "more-itertools",
    "strict-rfc3339",
]