# As per https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "hca-import-validation"
version = "0.0.16"
description = "HCA Staging Import Validation"
authors = ["Field Engineering  <dspfieldeng@broadinstitute.org>"]

[project]
name = "hca-import-validation"
version = "0.0.16"
description = "HCA Staging Import Validation"
urls = {"Source" = "https://github.com/dataBiosphere/hca-import-validation"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
attrs="^23.1.0"
beautifulsoup4="^4.12.2"
cachetools="^5.3.1"
certifi="^2023.5.7"
charset-normalizer="^3.1.0"
google="^3.0.0"
google-api-core="^2.11.0"
google-auth="^2.19.1"
google-cloud-core="^2.3.2"
google-cloud-storage="^2.9.0"
google-crc32c="^1.5.0"
google-resumable-media="^2.5.0"
googleapis-common-protos="^1.59.0"
idna="^3.4"
importlib-resources="^5.12.0"
jsonschema="^4.17.3"
more-itertools="^9.1.0"
pkgutil_resolve_name="^1.3.10"
protobuf="^4.23.2"
pyasn1="^0.5.0"
pyasn1-modules="^0.3.0"
pyrsistent="^0.19.3"
requests="^2.31.0"
rsa="^4.9"
six="^1.16.0"
soupsieve="^2.4.1"
strict-rfc3339="^0.7"
urllib3="^1.26.16"
zipp="^3.15.0"